fix: inconsistent spacing in nested lists

--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -316,6 +316,7 @@
     list-style-position: inside;
 
     li > ul, li > ol {
+      padding-top: .5rem;
       padding-left: 1rem;
     }
 
